--- a/index.html
+++ b/index.html
@@ -52,17 +52,19 @@
         <ul>
           <li><a class="nav-link scrollto active" href="https://instagram.com/stust_sa/"></a></li>
           <li><a class="nav-link scrollto active" href="#hero">首頁</a></li>
-          <li><a class="nav-link scrollto" href="#about">關於</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+<!--          <li><a class="nav-link scrollto" href="#about"></a></li>-->
+<!--          <li><a class="nav-link scrollto" href="#services"></a></li>-->
+          <li><a class="nav-link scrollto " href="#portfolio">貼文</a></li>
+          <li><a class="nav-link scrollto" href="#team">各部介紹</a></li>
+<!--          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>-->
+          <li class="dropdown"><a href="#"><span>常用各項連結</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li class="dropdown temp"><a href="#"><span>南臺常用網站</span><i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="https://portal.stust.edu.tw/abs_stu/checkin.asp" >南臺請假系統<i class="bi bi-fast-forward"></i></a></li>
                   <li><a href="http://flipclass.stust.edu.tw">南臺FlipClass</a></li>
+                  <li><a href="https://portal.stust.edu.tw/csls/Login.aspx">南臺服務學習</a></li>
+                  <li><a href=""></a></li>
                 </ul>
               </li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -79,8 +81,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+<!--          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>-->
+<!--          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>-->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
