--- a/index.html
+++ b/index.html
@@ -159,23 +159,20 @@
         <div class="row content">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="150">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              -----
             </p>
             <ul>
               <li><i class="ri-link"></i> <a href="https://sites.google.com/stust.edu.tw/loan/online">南臺學貸網站</a></li>
               <li><i class=""></i><p>temp</p></li>
-              <li><i class="ri-link"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-link"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-link"></i> --</li>
+              <li><i class="ri-link"></i> --</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              --
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <a href="#" class="btn-learn-more">:)</a>
           </div>
         </div>
 
